<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        tools:context="com.project.smarthome.smarthome.Views.LogInRegister.Shared.LogInRegisterHomeFragment">

        <ImageView
            android:id="@+id/log_in_register_home_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="60dp"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/screen_title_size" />

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/button_vertical_margin"
            android:layout_marginTop="@dimen/button_vertical_margin"
            android:background="@color/colorAccent"
            android:text="@string/log_in"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button_vertical_margin"
            android:background="@color/colorAccent"
            android:text="@string/register"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</layout>


