<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="logInRequest" type="com.project.smarthome.smarthome.Model.LogInRegister.LogInRequest"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="com.project.smarthome.smarthome.Views.LogInRegister.LogIn.LogInDetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

            <!-- Email -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_log_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorWhite"
                app:errorEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/log_in_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorWhite"
                    android:text="@={logInRequest.email}"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Password -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_log_in_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorWhite"
                app:errorEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/log_in_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:text="@={logInRequest.password}"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_log_in_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_vertical_margin"
                android:background="@color/colorAccent"
                android:text="@string/log_in"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </ScrollView>

</layout>


