<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="registrationRequest" type="com.project.smarthome.smarthome.Model.LogInRegister.RegistrationRequest"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="com.project.smarthome.smarthome.Views.LogInRegister.Register.RegisterDetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/log_in_register_home_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/input_bottom_margin"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tv_register_home_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_bottom_margin"
                android:gravity="center_horizontal"
                android:text="@{@string/home_id + registrationRequest.homeId}"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <!-- Details Form -->
            <LinearLayout
                android:id="@+id/ll_register_user_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--  Home Password -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_register_home_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorWhite"
                    app:errorEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_hub_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/home_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorWhite"
                        android:text="@={registrationRequest.homePassword}"/>
                </android.support.design.widget.TextInputLayout>

                <!-- First Name -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_register_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorWhite"
                    app:errorEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorWhite"
                        android:text="@={registrationRequest.firstName}"/>
                </android.support.design.widget.TextInputLayout>

                <!-- Last Name -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_register_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorWhite"
                    app:errorEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorWhite"
                        android:text="@={registrationRequest.lastName}"/>
                </android.support.design.widget.TextInputLayout>

                <!-- Email -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorWhite"
                    app:errorEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorWhite"
                        android:text="@={registrationRequest.email}"/>
                </android.support.design.widget.TextInputLayout>

                <!-- User Password -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_register_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorWhite"
                    app:errorEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorWhite"
                        android:text="@={registrationRequest.userPassword}"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_register_user_details_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/button_vertical_margin"
                    android:background="@color/colorAccent"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>
