<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Main View -->
        <FrameLayout
            android:id="@+id/home_fragment_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Navigation drawer -->
        <LinearLayout
            android:id="@+id/left_drawer"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>


            <!--Nav drawer items-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/nav_drawer_padding">

                <ExpandableListView
                    android:id="@+id/nav_drawer_expandable_list_view"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layoutDirection="rtl"
                    android:divider="@null"
                    android:dividerHeight="0dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/nav_drawer_heading_padding">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/automation"
                        android:textSize="@dimen/nav_drawer_heading_text"/>

                    <Switch
                        android:id="@+id/switch_automation_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:id="@+id/log_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/nav_drawer_heading_padding"
                    android:text="@string/log_out"
                    android:textSize="@dimen/nav_drawer_heading_text" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.DrawerLayout>

</layout>